2010-03-02  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: Vector gains a nested r_type type that is an 
	integral_constant<int,RTYPE> to facilitate TMP
	* src/RcppCommon.{h,cpp}: added RCPP_CALL_VECTOR and RCPP_CALL_MATRIX
	macros to facilitate calling a function templated by T = Vector<RTYPE>
	the macro hides the boiler-plate switch( TYPEOF(x) ){ case INTSXP : ... }

2010-03-01  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Vector.h: more typedef : CharacterMatrix, StringMatrix, 
	GenericMatrix, ExpressionMatrix, ListMatrix

	* src/ExpressionVector.cpp : replaced by templates in Vector.h
	* src/Rcpp/Vector.h: use templates to cover ExpressionVector additional
	methods : eval() and eval(const Environment& )

2010-02-28  Romain Francois <romain@r-enthusiasts.com>

    * src/Rcpp/Vector.h : more generic code for vectors. All vector 
    types are now generated from the template Rcpp::Vector<int RTYPE>
    where RTYPE is one of INTSXP, LGLSXP, REALSXP, RAWSXP, STRSXP, 
    VECSXP or EXPRSXP. 

2010-02-24  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/exceptions.h: some exception classes factored out 
	
	* src/Rcpp/VectorBase.h: now a template, using the 
	Curiously recurring template pattern (the type parameter is
	the derived class)

	* src/Rcpp/SEXP_Vector.h: the intermediate class 
	SEXP_Vector_Base is removed, reverting the change on 
	2010-02-09. This will facilitate the introduction of the 
	Curiously recurring template pattern on vectors

	* src/Rcpp/MatrixRow.h : Row has been factored out of SimpleVector
	into a separate template class Rcpp::MatrixRow
	
	* src/Rcpp/SimpleVector.h: gains a row method that returns 
	a SimpleVector::Row, aka MatrixRow<SimpleVector>
	
	* src/Rcpp/CharacterVector.h : gains a row method that returns
	a CharacterVector::Row, aka MatrixRow<CharacterVector>
	
	* src/Rcpp/SEXP_Vector.h : gains a row method that returns 
	a SEXP_Vector::Row aka MatrixRow<SEXP_Vector>
